# ChangeLog for media-libs/libgpod
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libgpod/ChangeLog,v 1.86 2011/10/24 05:54:05 tetromino Exp $

  24 Oct 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  libgpod-0.8.0.ebuild:
  Depend on correct slot of pygobject.

  29 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
  "ios" is now global USE flag.

  28 Mar 2011; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Make ios USE description understandable without using google

  27 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> libgpod-0.8.0.ebuild,
  metadata.xml:
  Rename USE="iphone" to USE="ios" wrt #344763.

  05 Nov 2010; Samuli Suominen <ssuominen@gentoo.org> libgpod-0.8.0.ebuild:
  amd64 stable wrt #343697

  04 Nov 2010; Christian Faulhammer <fauli@gentoo.org> libgpod-0.8.0.ebuild:
  stable x86, bug 343697

  31 Oct 2010; Samuli Suominen <ssuominen@gentoo.org> libgpod-0.7.2.ebuild:
  Remove hppa/ppc/ppc64 keywording wrt #313691.

*libgpod-0.8.0 (31 Oct 2010)

  31 Oct 2010; Samuli Suominen <ssuominen@gentoo.org> +libgpod-0.8.0.ebuild:
  Version bump.

  30 Sep 2010; Arun Raghavan <ford_prefect@gentoo.org>
  -libgpod-0.7.93.ebuild:
  Clean up older version

*libgpod-0.7.95 (30 Sep 2010)

  30 Sep 2010; Arun Raghavan <ford_prefect@gentoo.org>
  +libgpod-0.7.95.ebuild:
  Bump to 0.7.95. Some features, bug fixes and Mono bindings updates.

  07 Sep 2010; Arun Raghavan <ford_prefect@gentoo.org>
  libgpod-0.7.94.ebuild:
  Inherit mono to avoid sandbox violations.

*libgpod-0.7.94 (05 Sep 2010)

  05 Sep 2010; Arun Raghavan <ford_prefect@gentoo.org>
  +libgpod-0.7.94.ebuild:
  Bump to 0.7.94. Lots of fixes, and adds C# bindings (enabled with
  USE=mono).

  30 Aug 2010; Fabio Erculiani <lxnay@gentoo.org> libgpod-0.7.93.ebuild:
  fix libimobiledevice dependency, it's also a RDEPEND

  28 May 2010; Markus Meier <maekke@gentoo.org> libgpod-0.7.93.ebuild:
  add ~x86, bug #313691
