@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libgpod/Attic/libgpod-0.8.0.ebuild,v 1.7 2011/10/24 05:54:05 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libgpod/Attic/libgpod-0.8.0.ebuild,v 1.8 2012/01/14 18:30:45 ssuominen Exp $
 
 EAPI=3
 
@@ -43,8 +43,7 @@ pkg_setup() {
 }
 
 src_prepare() {
-	rm -f py-compile
-	ln -s $(type -P true) py-compile
+	>py-compile
 }
 
 src_configure() {
